--- a/srcs/requirements/front/src/components/Title/Title.scss
+++ b/srcs/requirements/front/src/components/Title/Title.scss
@@ -7,6 +7,7 @@
 }
 
 .text-title {
+	border-width: 1px;
 	font-size: 18px;
 	text-align: center;
 	.color1 {
